# collectune

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  README.md  docker-compose.yml  rustfmt.toml
.devcontainer/: devcontainer.json
backend/: Cargo.toml  clippy.toml
backend/debug/: query_api.py
backend/src/: db.rs  lib.rs  main.rs  rpc.rs  scanner.rs  server.rs  stream.rs
backend/src/migrations/: 0001.sql  0002.sql
backend/src/scanner/: classify.rs  metadata.rs  mod.rs  prepare.rs  scan.rs  staging.rs  types.rs
backend/tests/resources/collection-generator/: .gitignore  generate_collection.py
backend/tests/resources/collection/The Announcers - First Test/: 03. Geese.flac  07. Macedonians.flac  08. Monkeys.flac  09. Men.flac  10. Denizens.flac
collectune/: Cargo.toml
collectune/src/: main.rs
docker/: entrypoint.sh
frontend/: Cargo.toml  README.md  index.html
frontend/src/: audio.rs  builder.rs  button.rs  columns.rs  compile.rs  field_layout.rs  format.rs  http.rs  icons.rs  lib.rs  lineage.rs  main.rs  menu_bar.rs  now_playing.rs  organizer.rs  page.rs  query_def.rs  results.rs  rpc.rs  schema.rs  text_input.rs  web.rs  welcome.rs
scripts/: measure_snapshot.py  snapshot_composite.sh
src/: main.rs
tests/resources/collection-generator/: .gitignore  generate_collection.py  main.py  pyproject.toml
tests/resources/collection/The Announcers - First Test/: 01. Duck.flac  02. Hens.flac  04. Oysters.flac  05. Porpoises.flac  06. Tweezers.flac
xtask/: Cargo.toml
xtask/src/: main.rs
