[package]
name = "collectune"
version = "0.1.0"
edition = "2024"

[dependencies]
blake3 = "1"
clap = { version = "4.5", features = ["derive"] }
duckdb = { version = "1.4.4", features = ["bundled"] }
jiff = "0.2"
rayon = "1"
symphonia = { version = "0.5", features = ["all"] }
uuid = { version = "1", features = ["v4"] }
