[package]
name = "collectune"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
arrow-ipc = "56"
axum = "0.8"
blake3 = "1"
bytes = "1"
clap = { version = "4.5", features = ["derive"] }
duckdb = { version = "1.4.4", features = ["bundled"] }
jiff = "0.2"
rayon = "1"
symphonia = { version = "0.5", features = ["all"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }
