[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "collectune-server"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
arrow-ipc = "56"
axum = "0.8"
blake3 = "1"
bytes = "1"
clap = { version = "4.5", features = ["derive"] }
duckdb = { version = "1.4.4", features = ["bundled"] }
jiff = "0.2"
audiopus = "0.3.0-rc.0"
ogg = "0.9"
rayon = "1"
rubato = "0.16"
serde = { version = "1", features = ["derive"] }
symphonia = { version = "0.5", features = ["all"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
uuid = { version = "1", features = ["v4"] }
