[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "collectune-ui"
path = "src/main.rs"

[lints]
workspace = true

# Headless widget snapshot testing (native only). `egui_kittest` renders egui
# widgets to PNGs via wgpu so UI changes can be eyeballed against mockups and
# guarded against regressions. Dev-only, so it never enters the WASM bundle.
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
egui_kittest = { version = "0.34", features = ["wgpu", "snapshot"] }

[dependencies]
arrow-array = "56"
arrow-buffer = "56"
arrow-cast = "56"
arrow-ipc = "56"
bytes = "1"
eframe = "0.34"
egui_material_icons = { version = "0.6", default-features = false, features = ["filled"] }
futures-util = "0.3"
jiff = "0.2"
polyglot-sql = { version = "0.4", default-features = false, features = ["semantic", "generate", "dialect-duckdb", "stacker"] }
querydown = { git = "https://github.com/seancolsen/querydown", rev = "e551a30ac8a09f1abdd6b89ea714100b436312af" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
tokio = { version = "1", features = ["rt", "macros"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
gloo-net = { version = "0.6", features = ["http"] }
jiff = { version = "0.2", features = ["js"] }
js-sys = "0.3"
uuid = { version = "1", features = ["js"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-streams = "0.4"
web-sys = { version = "0.3", features = ["CssStyleDeclaration", "Document", "Element", "HtmlAudioElement", "HtmlCanvasElement", "HtmlElement", "HtmlMediaElement", "Node", "ReadableStream", "Response", "Window"] }
